--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,20 @@
         android:theme="@style/Theme.Blogs"
         tools:targetApi="31">
         <activity
+            android:name=".Forgotpassword"
+            android:parentActivityName=".MainActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Homepage"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".Addpost"
             android:exported="false">
@@ -33,16 +40,14 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".posts"
-            android:parentActivityName=".Homepage"
-            android:exported="false">
+            android:exported="false"
+            android:parentActivityName=".Homepage">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".postsAapter"
             android:exported="false">
@@ -50,7 +55,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".Registration"
             android:exported="false">
